--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,47 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Barra de progreso</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="porcentaje1" aria-valuenow="porcentaje1" aria-valuemin="0" aria-valuemax="100" [style.width]="porcentaje1 + '%'"></div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="porcentaje2" aria-valuenow="porcentaje2" aria-valuemin="0" aria-valuemax="100" [style.width]="porcentaje2 + '%'"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-incrementador (actualizaValor)="porcentaje1 = $event" nombre="Progress azul" [porcentaje]="porcentaje1"></app-incrementador>
+
+                <!-- <div class="input-group">
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="button" id="inputGroupFileAddon03" (click)="cambiarValor(-5)"><i class="mdi mdi-minus"></i></button>
+                    </span>
+                    <input type="text" name="porcentaje" [(ngModel)]="porcentaje" class="form-control">
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="button" id="inputGroupFileAddon03" (click)="cambiarValor(+5)"><i class="mdi mdi-plus"></i></button>
+                    </span>
+                </div> -->
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementador (actualizaValor)="porcentaje2 = $event" nombre="Progress verde" [porcentaje]="porcentaje2"></app-incrementador>
+
+
+            </div>
+        </div>
+    </div>
+
+</div>
